Sat Aug 13 01:56:11 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rake:  Update to Rake 0.9.2.2.  Prevent pollution of toplevel
	  namespace by Commands.  Remove unused variable and debugging
	  statement in tests.

Fri Aug 12 11:39:35 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: Desbribe "no" configure option for site_ruby
	  and vendor_ruby. Patch by Vit Ondruch. [Bug #5187][ruby-core:38921]

Fri Aug 12 09:00:24 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Import RubyGems 1.8.8.  Fixes encoding of YAML gemspec
	  from gems.  Github Issue #149

Fri Aug 12 08:17:46 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ipsocket.c (init_inetsock_internal): use SOMAXCONN for
	  listen backlog.

	* ext/socket/unixsocket.c (rsock_init_unixsock): ditto.

	* ext/socket/lib/socket.rb (Addrinfo#listen): ditto.
	  (Socket.tcp_server_sockets_port0): ditto.

	* ext/socket/mkconstants.rb: define SOMAXCONN as 5 if not available.

	[ruby-core:38493]

Fri Aug 12 03:24:35 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Import RDoc 3.9.2.  Fixes TIDYLINK for HTML output.

Thu Aug 11 15:37:42 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* variable.c (autoload_delete): An autoload entry is still in a
	  RCLASS_IV_TBL, not in a RCLASS_CONST_TBL, so take back the table
	  changed in r29600. And an autoload entry keeps not a
	  rb_const_entry_t but a NODE so remove rb_const_entry_t thing added
	  in r29602.

Thu Aug 11 15:07:36 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (link_command): use LIBRUBYARG in rbconfig for
	  unbundled extensions.  [ruby-core:38802] [Bug #5147]

	* lib/mkmf.rb (init_mkmf): revert r32902.  [ruby-core:38903]

Wed Aug 10 23:03:55 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb: fix argument check in the previous commit.

Wed Aug 10 22:12:28 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket.tcp): add :connect_timeout option.